--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="en" class="h-full">
 <head>
-	<link rel="style" href="./lib/style/mainpage.css" defer />
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	%sveltekit.head%
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="color-scheme" content="dark light" />
+    %sveltekit.head%
 	<style>
 		:root {
 			margin: 0;
@@ -20,10 +20,16 @@
 
 		}
 	</style>
+    <script>
+        // Check for dark mode preference
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        } else {
+            document.documentElement.classList.remove('dark');
+        }
+    </script>
 </head>
-
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
+<body class="min-h-screen flex flex-col">
+    <div class="flex-1 flex flex-col">%sveltekit.body%</div>
 </body>
-
 </html>
